@@ -16,6 +16,7 @@ Verilator 5.037 devel
 * Add BADVLTPRAGMA on unknown Verilator pragmas (#5945). [Shou-Li Hsu]
 * Fix filename backslash escapes in C code (#5947).
 * Fix sign extension of signed compared with unsigned case items (#5968).
+* Fix constant propagation making upper bits Xs (#5969).
 
 
 Verilator 5.036 2025-04-27
